--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Game of Life</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div id="header">
@@ -17,7 +18,11 @@
     </div>
 
     <div id="main">
-      <div class="sidebar">Sidebar</div>
+      <div class="sidebar">
+        To-do List
+        <ul id="task-list"></ul>
+        <li><button>New Task</button></li>
+      </div>
       <div class="content">Main Content</div>
     </div>
 
