ADD(Goal List): Implement goal tracking Add functions for creating goal elements and adding the elements to the goal list.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
       <div class="sidebar">
         To-do List
         <ul id="task-list"></ul>
-        <li><button>New Task</button></li>
+        <button>New Task</button>
       </div>
-      <div class="content">Main Content</div>
+      <div class="content">
+        Main Content
+        <ul id="goal-list"></ul>
+        <button>New Goal</button>
+      </div>
     </div>
 
     <div id="footer">Footer</div>
